# canopy

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SYSTEM.md  install.sh  render.yaml
.canopy/: workspace.yaml
architecture/: README.md  adapters.md  basement.md  budgets.md  context-mesh.md  conversations.md  cross-workspace-signals.md  decision-graph.md  engine-layer.md  engine-reference.md  governance.md  heartbeat.md  marketplace.md  memory-architecture.md  optimal-system-mapping.md  peer-protocol.md  proactive-agents.md  processing-pipeline.md  progressive-disclosure.md  project-layer.md  self-healing.md  sessions.md  signal-integration.md  speculative-execution.md  system-model.md  tasks.md  team-coordination.md  three-space-model.md  tiered-loading.md  verification.md  workspaces.md
backend/: .gitignore  AGENTS.md  README.md  mix.exs
desktop/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: filesystem.rs  lib.rs  main.rs
docs/: getting-started.md  hierarchy.md
guides/: README.md  agent-design.md  company-setup.md  getting-started.md  signal-theory-quickstart.md  skill-design.md  workflow-design.md
integrations/: README.md
operations/: README.md
protocol/: README.md  agent-format.md  company-format.md  department-format.md  division-format.md  operations-spec.md  pipelines.md  project-format.md  signal-theory.md  spec-layer.md  (+4 more)
(+655 files in other folders)
